<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.PreferenceCategory
        android:title="@string/available_riddle">

        <androidx.preference.ListPreference
            android:defaultValue="0"
            android:entries="@array/available_riddle"
            android:entryValues="@array/available_riddle_values"
            android:key="@string/pref_available_riddle"
            android:title="@string/pref_load_riddle"
            app:useSimpleSummaryProvider="true" />

    </androidx.preference.PreferenceCategory>

    <CheckBoxPreference
        android:key="@string/pref_adminmode"
        android:title="@string/pref_adminmode_title"
        app:useSimpleSummaryProvider="true" />

</androidx.preference.PreferenceScreen>